[package]
name = "wood_parse"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A library for lexing"
repository = "https://github.com/WoodieMaster/wood_parse"
keywords = ["lexing"]
categories = ["compiler"]
exclude = [".*"]
readme = "README.md"

[dependencies]
anyhow = "1.0.97"
